<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_summaries"
      android:icon="@drawable/icon_empty_18dp"
      android:title="@string/menu_feed" />
      <item
        android:id="@+id/nav_bookmarked"
        android:icon="@drawable/ic_bookmark_grey600_24dp"
        android:title="@string/menu_bookmarks" />
      <item
      android:id="@+id/nav_categories"
      android:icon="@drawable/icon_empty_18dp"
      android:title="@string/menu_categories" />
    <item
      android:id="@+id/nav_authors"
      android:icon="@drawable/icon_empty_18dp"
      android:title="@string/menu_authors" />
      <item
        android:id="@+id/nav_about"
        android:icon="@drawable/icon_empty_18dp"
        android:title="@string/menu_about" />
      <item
        android:id="@+id/nav_donate"
        android:icon="@drawable/icon_empty_18dp"
        android:title="@string/menu_donate" />
  </group>
</menu>